fix window overlapping

--- a/site/src/Config.css
+++ b/site/src/Config.css
@@ -4,107 +4,6 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.clock-container {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  display: flex;
-  inset: 0;
-}
-
-.clock {
-  margin: auto;
-  background-color: #0001;
-  border: solid 1px #0002;
-  border-radius: 16px;
-  padding: 32px;
-  backdrop-filter: blur(16px);
-}
-
-.clock-date {
-  color: white;
-  font-size: 32px;
-  text-align: center;
-}
-
-.clock-time {
-  color: white;
-  font-size: 128px;
-  text-align: center;
-}
-
-.clock-meta {
-  color: white;
-  font-size: 32px;
-  text-align: center;
-}
-
-.progress-container {
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  display: flex;
-  inset: 0;
-}
-
-.progress {
-  margin: auto auto 32px auto;
-  background-color: #0001;
-  border: solid 1px #0002;
-  border-radius: 16px;
-  padding: 32px;
-  backdrop-filter: blur(16px);
-}
-
-.progress-day {
-  display: flex;
-  gap: 1rem;
-}
-
-.progress-month {
-  display: flex;
-  gap: 1rem;
-}
-
-.progress-year {
-  display: flex;
-  gap: 1rem;
-}
-
-.progress-label {
-  width: 3rem;
-  text-align: left;
-  color: white;
-}
-
-.progress-value {
-  width: 3rem;
-  text-align: right;
-  color: white;
-}
-
-.progress-barouter {
-  width: 200px;
-  height: 12px;
-  border: solid 1px #0002;
-  border-radius: 6px;
-}
-
-.progress-barinner {
-    height: 100%;
-    background-color: #FFF;
-    border-radius: 6px;
-}
-
-.bg {
-  z-index: -1;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  inset: 0;
-}
-
 .title {
   font-size: 32px;
   font-weight: bold;
